# pdf_similarity

./: README.md  example.py  main.py  pyproject.toml  readPdf.py  similarity.py
searchFiles/: README.md  database.db  findFile.py  findPdf.py
similarity/: main.py
src/: example.py
src/PdfSim/: pdf_similarity.py
src/PdfSim/util/: findPdf.py  similarity.py
src/PdfSim/util/algo/: algo.py  fingerprint.py
